--- a/templates/auth.html
+++ b/templates/auth.html
@@ -7,6 +7,10 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-image: url('imagens/background.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -30,21 +34,21 @@
         button {
             width: 100%;
             padding: 10px;
-            background: #007BFF;
+            background: #ff5a00;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
         }
         button:hover {
-            background: #0056b3;
+            background: #b63e01;
         }
         .link {
             text-align: center;
             margin-top: 10px;
         }
         .link a {
-            color: #007BFF;
+            color: #ff5a00;
             text-decoration: none;
         }
         .link a:hover {
