--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,7 +9,10 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f7f7f7;
+            background-image: url('imagens/background.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -42,19 +45,19 @@
             background-color: #f9f9f9;
         }
         button {
-            background-color: #007BFF;
+            background-color: #ff5a00;
             color: white;
             border: none;
             cursor: pointer;
             font-weight: bold;
         }
         button:hover {
-            background-color: #0056b3;
+            background-color: #b63e01;
         }
         button:active {
-            background-color: #003c7a;
+            background-color: #982d00;
         }
-        canvas {
+        #grafico {
             margin-top: 30px;
             width: 100%;
             max-width: 500px;
