--- a/templates/criarConta.html
+++ b/templates/criarConta.html
@@ -30,21 +30,21 @@
         button {
             width: 100%;
             padding: 10px;
-            background: #007BFF;
+            background: #ff5a00;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
         }
         button:hover {
-            background: #0056b3;
+            background: #b63e01;
         }
         .link {
             text-align: center;
             margin-top: 10px;
         }
         .link a {
-            color: #007BFF;
+            color: #ff5a00;
             text-decoration: none;
         }
         .link a:hover {
