--- a/templates/auth.html
+++ b/templates/auth.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('imagens/background.jpg');
+            background-image: url('../static/background.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
@@ -16,24 +16,25 @@
             align-items: center;
             height: 100vh;
             background-color: #f4f4f4;
+            overflow: hidden;
         }
         .container {
             background: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
+            width: 400px;
         }
         input {
             width: 100%;
-            padding: 10px;
-            margin: 10px 0;
+            padding: 10px 0px 10px 0px;
+            margin-bottom: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
         button {
             width: 100%;
-            padding: 10px;
+            padding: 10px 0px 10px 0px;
             background: #ff5a00;
             color: white;
             border: none;
