--- a/templates/criarConta.html
+++ b/templates/criarConta.html
@@ -8,22 +8,27 @@
         body {
             font-family: Arial, sans-serif;
             display: flex;
+            background-image: url("../static/background.jpg");
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
             justify-content: center;
             align-items: center;
             height: 100vh;
             background-color: #f4f4f4;
+            overflow: hidden;
         }
         .container {
             background: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
+            width: 400px;
         }
         input {
             width: 100%;
-            padding: 10px;
-            margin: 10px 0;
+            padding: 10px 0px 10px 0px;
+            margin-bottom: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
