--- a/templates/criarConta.html
+++ b/templates/criarConta.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             display: flex;
-            background-image: url("../static/background.jpg");
+            background-image: url("../static/imagens/background.jpg");
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -26,11 +26,13 @@
             width: 400px;
         }
         input {
+            margin: 10px 0;
+            padding: 12px;
             width: 100%;
-            padding: 10px 0px 10px 0px;
-            margin-bottom: 10px;
             border: 1px solid #ccc;
-            border-radius: 5px;
+            border-radius: 8px;
+            box-sizing: border-box;
+            font-size: 14px;
         }
         button {
             width: 100%;
