--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,7 +9,7 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url("../static/background.jpg");
+            background-image: url("../static/imagens/background.jpg");
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
